# wpe

./: README.md  pyproject.toml
b1/1-travel/: solution.py
b1/10-tee/: solution.py
b1/11-dirfilehash/: solution.py  test_solution.py
b1/2-range/: solution.py
b1/3-log-dict/: solution.py
b1/4-log-class/: solution.py  test_solution.py
b1/5-json-cities/: cities.csv  solution.py  test_solution.py
b1/7-func-arg/: solution.py
b1/8-multiziperator/: solution.py  test_solution.py
b1/9-wedding/: solution.py  test_solution.py
object-oriented/exercise1/: bank_account.py  cart.py  person.py  scoop.py
