[tool.poetry]
name = "wpe"
version = "0.1.0"
description = "Weekly Python Ex"
authors = ["pke11y <paddyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^7.1.2"
argparse = "^1.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
yamllint = "^1.24.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
